# python-examples

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pre-commit-action.yaml  test.yml
python/: 01_manual_python.ipynb  02_manual_pandas.ipynb  03_manual_plots.ipynb  example_ml.ipynb  example_plots.ipynb  functions.py
tests/: test_functions.py
