[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.poetry]
name = "python_examples"
version = "0.1.1"
description = "Example code for a variety of tasks in python"
authors = ["pietro greselin <p.greselin@gmail.com>"]
packages = [ { include = 'python'} ]

[tool.poetry.dependencies]
python = "3.9.13"
category-encoders = "2.6.3"
matplotlib = "3.8.2"
notebook = "6.5.4"
numpy = "1.26.2"
pandas = "2.1.3"
scikit-learn = "1.3.2"
scikit-plot = "0.3.7"
scipy = "1.11.4"
seaborn = "0.12.2"
shap = "0.41.0"
tensorflow = "2.14.0"
tensorflow-io-gcs-filesystem = "0.31.0"
xgboost = "1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-clarity = "^1.0.1"
mypy = "^0.981"
sqlparse = "^0.4.2"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
pre-commit = "3.5.0"
flake8 = "6.1.0"
notebook = "6.5.4"
scikit-learn = "1.3.2"
importlib-metadata = "6.8.0"

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-ra -q'
testpaths = ['tests']